[project]
name = "rso-replay"
version = "0.1.0"
description = "Replay service for RSO game implementing Event Sourcing and CQRS"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "motor>=3.3.1",
    "nats-py>=2.6.0",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.6",
    "Pillow>=10.1.0", # for frame generation
    "numpy>=1.26.2", # for image manipulation
    "ffmpeg-python>=0.2.0", # for video creation
    "pydantic-settings>=2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=23.10.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
